--- a/index.html
+++ b/index.html
@@ -26,5 +26,16 @@
                 </div>
             </div>
         </header>
+        <section class="hero">
+            <div class="container">
+                <div class="hero-content">
+                    <h1 class="hero-title">SHARE YOUR HOLIDAY DREAM</h1>
+                    <p class="hero-text">
+                        And find the perfect partner to fullfill it
+                    </p>
+                    <button class="hero-btn">Find your holiday partner</button>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
