--- a/index.html
+++ b/index.html
@@ -37,5 +37,62 @@
                 </div>
             </div>
         </section>
+        <section class="Dreamshare">
+            <div class="container">
+                <h3 class="Dreamshare-title">How Dreamshare works?</h3>
+                <div class="Dreamshare-content">
+                    <div class="Dreamshare-img">
+                        <div class="Dreamshare-steep1">
+                            <img src="./img/Step 1 image.png" alt="img" />
+                            <div class="Dreamshare-steep1-text">
+                                <button class="Dreamshare-btn">STEP 1</button>
+                                <h4 class="Dreamshare-sabtitle">
+                                    Sed leo enim, condimentum
+                                </h4>
+                                <p class="Dreamshare-p">
+                                    Quisque libero libero, dictum non turpis in,
+                                    luctus semper lorem. Donec rhoncus a leo sit
+                                    amet facilisis.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="Dreamshare-img">
+                        <div class="Dreamshare-steep1">
+                            <img src="./img/ыыв.png" alt="img" />
+                            <div class="Dreamshare-steep1-text">
+                                <button class="Dreamshare-btn">STEP 1</button>
+                                <h4 class="Dreamshare-sabtitle">
+                                    Sed leo enim, condimentum
+                                </h4>
+                                <p class="Dreamshare-p">
+                                    Quisque libero libero, dictum non turpis in,
+                                    luctus semper lorem. Donec rhoncus a leo sit
+                                    amet facilisis.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="Dreamshare-img">
+                        <div class="Dreamshare-steep1">
+                            <img src="./img/staep3.png" alt="img" />
+                            <div class="Dreamshare-steep1-text">
+                                <button class="Dreamshare-btn">STEP 1</button>
+                                <h4 class="Dreamshare-sabtitle">
+                                    Sed leo enim, condimentum
+                                </h4>
+                                <p class="Dreamshare-p">
+                                    Quisque libero libero, dictum non turpis in,
+                                    luctus semper lorem. Donec rhoncus a leo sit
+                                    amet facilisis.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
