meet section end

--- a/index.html
+++ b/index.html
@@ -94,5 +94,60 @@
                 </div>
             </div>
         </section>
+        <section class="meet">
+            <div class="container">
+                <h3 class="meet-title-h3">
+                    Meet a partner for your best holiday
+                </h3>
+                <div class="meet-title">
+                    <div class="meet-title-grup">
+                        <img src="./img/Avatar.png" alt="img" />
+                        <div class="meet-title-grup-text">
+                            <h4 class="meet-title-p">Bradley Hunter</h4>
+                            <p class="meet-end">
+                                Based in Chicago. I love playing tennis and loud
+                                music.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="meet-title-grup">
+                        <img src="./img/Avatar (1).png" alt="img" />
+                        <div class="meet-title-grup-text">
+                            <h4 class="meet-title-p">Bradley Hunter</h4>
+                            <p class="meet-end">
+                                Based in Chicago. I love playing tennis and loud
+                                music.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="meet-title-grup">
+                        <img src="./img/Avatar (2).png" alt="img" />
+                        <div class="meet-title-grup-text">
+                            <h4 class="meet-title-p">Bradley Hunter</h4>
+                            <p class="meet-end">
+                                Based in Chicago. I love playing tennis and loud
+                                music.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="meet-title-grup">
+                        <img src="./img/Avatar (3).png" alt="img" />
+                        <div class="meet-title-grup-text">
+                            <h4 class="meet-title-p">Bradley Hunter</h4>
+                            <p class="meet-end">
+                                Based in Chicago. I love playing tennis and loud
+                                music.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="meet-btns">
+                    <button class="meet-btn">See other partners</button>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
