diskower section add

--- a/index.html
+++ b/index.html
@@ -149,5 +149,76 @@
                 </div>
             </div>
         </section>
+        <section class="discover">
+            <div class="container">
+                <h4 class="discover-4">Discover holiday activity ideas</h4>
+
+                <div class="discover-title">
+                    <div class="discover-block-1">
+                        <div class="img1">
+                            <img src="./img/Object.png" alt="img" />
+                            <div class="discover-text-1">
+                                <h3 class="discover-title-h3">
+                                    Sports and Activis
+                                </h3>
+                            </div>
+                        </div>
+                        <div class="img1">
+                            <img src="./img/Object (1).png" alt="img" />
+                            <div class="discover-text-1">
+                                <h3 class="discover-title-h3">
+                                    Sports and Activis
+                                </h3>
+                            </div>
+                        </div>
+                        <div class="img1">
+                            <img src="./img/Object (2).png" alt="img" />
+                            <div class="discover-text-1">
+                                <div class="discover-text-1">
+                                    <h3 class="discover-title-h3">
+                                        Sports and Activis
+                                    </h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="discover-block-2">
+                        <div class="discover-img1">
+                            <img src="./img/Object (3).png" alt="img" />
+                            <div class="discover-red">
+                                <h3 class="discover-red-h3">Games</h3>
+                            </div>
+                        </div>
+
+                        <div class="discover-img1">
+                            <img src="./img/Object (4).png" alt="img" />
+                            <div class="discover-text-1">
+                                <h3 class="discover-title-h3">
+                                    Sports and Activis
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="discover-block-2">
+                        <div class="discover-img1">
+                            <img src="./img/Object (5).png" alt="img" />
+                            <div class="discover-red">
+                                <h3 class="discover-red-h3">Games</h3>
+                            </div>
+                        </div>
+
+                        <div class="discover-img1">
+                            <img src="./img/Object (6).png" alt="img" />
+                            <div class="discover-red">
+                                <h3 class="discover-red-h3">
+                                    Culture and Education
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
