--- a/index.html
+++ b/index.html
@@ -220,5 +220,44 @@
                 </div>
             </div>
         </section>
+        <section class="section-end">
+            <div class="container">
+                <div class="w4text">
+                    <h4>Crate your holiday activity</h4>
+                    <p>Hi! What are your holiday interests?</p>
+                    <div class="input">
+                        <input type="text" />
+                        <button>Search partners</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <hr />
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-nav">
+                    <div class="logo-end">
+                        <a href="#">DREAMSHARE</a>
+                    </div>
+                    <div class="company">
+                        <h6>Company</h6>
+                        <nav class="all1">
+                            <li><a href="#">about</a></li>
+                            <li><a href="#">contact</a></li>
+                            <li><a href="#">press</a></li>
+                            <li><a href="#">blog</a></li>
+                            <li><a href="#">terms and privacy</a></li>
+                            <li><a href="#">help</a></li>
+                        </nav>
+                    </div>
+                    <div class="partner">
+                        <a href="#">Partners</a>
+                    </div>
+                    <div class="logo-end2">
+                        <img src="./img/Bitmap.png" alt="" />
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
