--- a/index.html
+++ b/index.html
@@ -226,7 +226,10 @@
                     <h4>Crate your holiday activity</h4>
                     <p>Hi! What are your holiday interests?</p>
                     <div class="input">
-                        <input type="text" />
+                        <input
+                            type="text"
+                            placeholder="Enter your insterests"
+                        />
                         <button>Search partners</button>
                     </div>
                 </div>
